--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # .env.local
 APP_ENV=prod
-APP_DEBUG=0
+APP_DEBUG=1
 
-DATABASE_URL="mysql://na1nrt6jl28z9fru:ym99a9k38n4axx5k@pxukqohrckdfo4ty.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/lb6ghb0mza1qoe95?serverVersion=5.7"
+DATABASE_URL="mysql://cj28lu6kkylu2348:dvmf1d7spe79fatq@pxukqohrckdfo4ty.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qdihfbib155wblxa?serverVersion=5.7"
