--- a/.env.local
+++ b/.env.local
@@ -2,4 +2,4 @@
 APP_ENV=prod
 APP_DEBUG=0
 
-DATABASE_URL="mysql://cj28lu6kkylu2348:dvmf1d7spe79fatq@pxukqohrckdfo4ty.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/qdihfbib155wblxa?serverVersion=5.7"
+DATABASE_URL="mysql://userCryptoApp:DwlzwMqZYDOXHBQy@127.0.0.1:3306/qdihfbib155wblxa?serverVersion=5.7"
