--- a/.env
+++ b/.env
@@ -23,6 +23,6 @@ APP_SECRET=ba5f38e3d1fa7a16dd7cd3ca92ec8614
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-DATABASE_URL="mysql://userCryptoApp:DwlzwMqZYDOXHBQy@127.0.0.1:3306/cryptoapp?serverVersion=5.7"
+DATABASE_URL="mysql://user:mdp@host:3306/dbname?serverVersion=5.7"
 # DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
